syntax = "proto3";

package pb;
import "order.proto";

option go_package = "peerbill-trader-api/pb";

message GetBuyOrderRequest {
    int64 id = 1;
    string order_type = 2;
}

message GetBuyOrderResponse {
    Order buyOrder = 1;
}