syntax = "proto3";

package pb;
import "order.proto";

option go_package = "github.com/ebukacodes21/peerbill-trader-api/pb";

message GetOrderRequest {
    int64 id = 1;
    string order_type = 2;
}

message GetOrderResponse {
    Order order = 1;
}